--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-
-sap-ui-cachebuster-info.json
-extended_runnable_file.html
 .*/extended_runnable_file.html
-mock_preview_sapui5.html
-.*/mock_preview_sapui5.html
-fioriHtmlRunner.html
 .*/fioriHtmlRunner.html
-visual_ext_index.html
+.*/mock_preview_sapui5.html
 /webapp/visual_ext_index.html
+dist
+extended_runnable_file.html
+fioriHtmlRunner.html
+mock_preview_sapui5.html
+sap-ui-cachebuster-info.json
+visual_ext_index.html
