Updated for SCP WebIDE

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
+.*/APIExternalProducer.js
 .*/extended_runnable_file.html
 .*/fioriHtmlRunner.html
 .*/mock_preview_sapui5.html
+/mta_archives/
 /webapp/visual_ext_index.html
+APIExternalProducer.js
+AppVariantPreviewPayload.zip
+AppVariant_index.html
+UIAdaptation_index.html
+changes_preview.js
+cp.project.properties.json
 dist
 extended_runnable_file.html
 fioriHtmlRunner.html
+mergedManifestDescriptor.json
 mock_preview_sapui5.html
+preview.json
 sap-ui-cachebuster-info.json
 visual_ext_index.html
